# version_sync

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  package.json  pyproject.toml
src/: version-sync.py
src/version_sync/: __main__.py  package_json.py  pyfile.py  pyproject_toml.py
test/: test_version_sync.py
